src/main/java/com/example/signalapp/error/SignalAppNotFoundException.java
package com.example.signalapp.error;

public class SignalAppNotFoundException extends Exception {
}
